# IoT-Smart-Energy-Monitor

./: .gitignore  README.md  pyproject.toml
config/: energy_default.yaml
docs/: iot_energy_hardware_guide.md
hardware/esp32_energy_monitor/: esp32_energy_monitor.ino
smart_energy/: __init__.py  analytics.py  cli.py  config.py  dashboard.py  database.py  hardware_bridge.py
tests/: test_smart_energy.py
